@@ -1,5 +1,10 @@
 $Id$
 
+2015-10-11  Christian Franke  <franke@computer.org>
+
+	drivedb.h: SiliconMotion based SSDs: Transcend SSD370S, SSD420,
+	update attribute 245 (ticket #595, ticket #602).
+
 2015-10-10  Christian Franke  <franke@computer.org>
 
 	Makefile.am: Use MKDIR_P to create directories
